# Spellborne-data

./: LICENSE  README.md  monsters.json  moves.json  pyproject.toml  type_chart.json
.github/workflows/: ci.yml
