[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spellborne-data"
version = "0.1.0"
description = "CLI & Python API to scrape monsters & moves from Spellborne."
authors = [{ name="Jeremi", email="Jeremi.Jenkins@gmail" }]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "requests",
  # any other runtime deps
]
